@@ -54,3 +54,4 @@ VignetteIndexEntry
 VignetteKeyword
 walltime
 Zaroyko
+parsable
